[desk-tool] Fix menu alignment

--- a/packages/@sanity/desk-tool/src/panes/documentPane/documentPaneMenuItems.css
+++ b/packages/@sanity/desk-tool/src/panes/documentPane/documentPaneMenuItems.css
@@ -2,8 +2,14 @@
 
 .menuItem {
   display: inline-flex;
-  /* justify-content: space-between; */
-  /* width: stretch; */
+  align-items: center;
+  flex: 1;
+  min-width: 0;
+}
+
+.menuItemLabel {
+  flex: 1;
+  min-width: 0;
 }
 
 .hotkey {
